--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
-    "antd": "^5.29.0",
+    "antd": "5.29.0",
     "framework": "workspace:*",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -27,6 +27,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "less": "^4.4.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^7.2.2",
