feat: 添加mock本地测试数据功能

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
+    "dev:mock": "turbo run dev:mock",
     "lint": "turbo run lint"
   },
   "keywords": [],
