--- a/turbo.json
+++ b/turbo.json
@@ -15,8 +15,15 @@
       "cache": false,
       "persistent": true
     },
+    "dev:mock": {
+      "dependsOn": [
+        "^dev:mock"
+      ],
+      "cache": false,
+      "persistent": true
+    },
     "lint": {
       "cache": true
-    }
+    },
   }
 }
