--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {},
   "dependencies": {
+    "@types/react": "^19.2.5",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "zustand": "^5.0.8"
   },
   "keywords": [],
   "author": "",
