--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@types/lodash": "^4.17.20",
     "antd": "5.29.0",
     "framework": "workspace:*",
+    "lodash": "^4.17.21",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6"
