--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,9 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "dev:mock": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "vite --mode dev",
+    "dev:prod": "vite --mode production",
+    "dev:mock": "vite --mode dev",
+    "build": "tsc -b && vite build --mode production",
+    "build:dev": "tsc -b && vite build --mode dev",
     "lint": "eslint .",
     "preview": "vite preview"
   },
