--- a/packages/mock/package.json
+++ b/packages/mock/package.json
@@ -5,9 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev:mock": "ts-node src/index.ts",
-    "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --config nodemon.json",
+    "dev:mock": "nodemon --config nodemon.json",
+    "start": "node dist/index.js"
   },
   "keywords": [
     "mock",
