--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "ahooks": "^3.9.6",
     "antd": "5.29.0",
     "framework": "workspace:*",
     "lodash": "^4.17.21",
