--- a/apps/web/.env
+++ b/apps/web/.env
@@ -1,6 +1,10 @@
 # AUTH_TOKEN 缓存失效时间（单位：毫秒）
 VITE_AUTH_TOKEN_EXPIRE_TIME = 7200000
 
+#界面标题
+VITE_TITLE = "WMS"
+
+
 # 端口号
 VITE_SERVER_PORT = 7000
 
