--- a/apps/web/.env
+++ b/apps/web/.env
@@ -9,6 +9,7 @@ VITE_TITLE = "WMS"
 VITE_SERVER_PORT = 7000
 
 # 登录页面
+VITE_BASE_URL = "http://127.0.0.1:3001/api"
 VITE_LOGIN_URL = "/login"
 
 # 接口地址
