--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {},
   "dependencies": {
+    "ahooks": "^3.9.6",
+    "antd": "5.29.0",
     "axios": "^1.13.2",
+    "less": "^4.4.2",
     "lodash": "^4.17.21",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
