refactor: 重构模块导入路径和依赖配置
重构项目中各模块的导入路径，使用绝对路径替代相对路径，提高代码可维护性
移除tsconfig.json中的paths配置，简化项目配置
更新package.json中的开发依赖，添加vite相关配置
将useStoreValue.ts重命名为useValue.ts并调整位置

--- a/packages/framework/tsconfig.json
+++ b/packages/framework/tsconfig.json
@@ -21,33 +21,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@Interface": [
-        "src/interface.ts"
-      ],
-      "@control/*": [
-        "src/comp/control/*"
-      ],
-      "@view/*": [
-        "src/comp/view/*"
-      ],
-      "@data/*": [
-        "src/data/*"
-      ],
-      "@handler/*": [
-        "src/handler/*"
-      ],
-      "@stores/*": [
-        "src/stores/*"
-      ],
-      "@utils/*": [
-        "src/utils/*"
-      ]
-    }
+    "jsx": "react-jsx"
   },
   "include": [
     "src/**/*",
