--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -20,6 +20,10 @@
   "packageManager": "pnpm@10.13.1",
   "devDependencies": {
     "@types/lodash": "^4.17.20",
-    "@types/react": "^19.2.5"
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.5",
+    "@vitejs/plugin-react-swc": "^4.2.1",
+    "typescript": "~5.9.3",
+    "vite": "^7.2.2"
   }
 }
