--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -1,29 +1,46 @@
 {
-  "name": "framework",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
-  "dependencies": {
+  "name": "@jl/framework",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/framework.umd.js",
+  "module": "./dist/framework.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/framework.es.js",
+      "require": "./dist/framework.umd.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "peerDependencies": {
     "ahooks": "^3.9.6",
     "antd": "5.29.0",
     "axios": "^1.13.2",
-    "less": "^4.4.2",
     "lodash": "^4.17.21",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "zustand": "^5.0.8"
+    "simplebar-react": "^3.3.2"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.13.1",
   "devDependencies": {
     "@types/lodash": "^4.17.20",
-    "@types/node": "^24.10.0",
     "@types/react": "^19.2.5",
-    "@vitejs/plugin-react-swc": "^4.2.1",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "less": "^4.4.2",
+    "globals": "^16.5.0",
     "typescript": "~5.9.3",
-    "vite": "^7.2.2"
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4",
+    "vite-plugin-dts": "^4.5.4"
   }
 }
