--- a/packages/mock/package.json
+++ b/packages/mock/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mockjs": "^1.0.10",
     "express": "^5.1.0",
     "mockjs": "^1.1.0"
   },
