feat(framework): 扩展控件类型并优化表单展示
- 新增多种控件类型支持：Select、Switch、Radio、Checkbox、Date、Time 等
- 重构控件枚举类型名称从 CtrlType 为 Ctrl，并统一导出为 C
- 优化文本控件对齐样式，支持 left/right/center 对齐方式
- 更新控件工厂组件映射，增加新控件的注册逻辑
- 调整表格工具类中默认控件类型的引用
- 升级依赖包 @ant-design/icons 至版本 6.1.0
- 添加开发环境监听构建脚本 dev:watch
- 移除已废弃的 TextAlign 枚举定义
- 修复 SimpleBar 滚动条样式问题，设置自定义滚动条颜色
- 在主布局中集成 SimpleBar 实现路由内容区域滚动优化

--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -18,10 +18,12 @@
   },
   "scripts": {
     "build": "tsc -b && vite build",
+    "dev:watch": "tsc -b --watch & vite build --watch",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "peerDependencies": {
+    "@ant-design/icons": "^6.1.0",
     "ahooks": "^3.9.6",
     "antd": "5.29.0",
     "axios": "^1.13.2",
@@ -31,6 +33,7 @@
     "simplebar-react": "^3.3.2"
   },
   "devDependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
