--- a/apps/web/.env.mock
+++ b/apps/web/.env.mock
@@ -1,8 +1,5 @@
 # 环境名称
-VITE_ENV = "dev"
-
-# 网页端口号
-VITE_SERVER_PORT = 7000
+VITE_ENV = "mock"
 
 # API地址
 VITE_BASE_URL = "http://127.0.0.1:3001/api"
