--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --mode dev",
     "dev:prod": "vite --mode production",
-    "dev:mock": "vite --mode dev",
+    "dev:mock": "vite --mode mock",
     "build": "tsc -b && vite build --mode production",
     "build:dev": "tsc -b && vite build --mode dev",
     "lint": "eslint .",
